2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_device_init): Fix up 03707489a839.

2020-06-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Grayscale fixes.

	* graph/win32/grwin32.c (gr_win32_surface_init): Straighten mapping.
	(gr_win32_surface_refresh_rectangle): Use `memcpy'.

	* graph/grobjs.c (grNewBitmap): Add padding to gray required by GDI.

2020-06-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grobjs.c (grFindColor): Fortify gray luminance.
	* graph/gblblit.c (GRGB*_TO_GRAY8): Synchronize with `grFindColor'.

2020-06-24  Jan Alexander Steffens  <jan.steffens@gmail.com>

	* Makefile (COMPILE): Prioritize FreeType path.

	This ensures the includedir for the built FreeType comes first,
	before any flags for a system FreeType which might be pulled in
	through pkg-config for harfbuzz.

2020-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_device_init): Prioritize 32-bit formats.

2020-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_convert_*): Clean up `uint32'.
	(gr_x11_device_init): Display logging.

2020-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Ignore redundant Expose from resizing.

	* graph/x11/grx11.c (gr_x11_surface_init): Enable VisibilityNotify.
	(gr_x11_surface_listen_event): Track recent Expose events and ignore
	redundant ones.

2020-06-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Miscellaneous clean-ups.

	* graph/x11/grx11.c (gr_x11_surface_refresh_rect): Generate Expose
	instead of `XPutImage'.
	(gr_x11_blitter_reset): Signedness.
	(gr_x11_surface_listen_event): Logging.

2020-06-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Simplify X11 driver.

	* graph/x11/grx11.c (grX11Surface): Remove redundant fields.
	(gr_x11_blitter_reset, gr_x11_surface_{resize,init}): Work directly
	with `XImage'.
	(gr_x11_surface_listen_event): Make sure resize succeeds.
